tests/baselines/reference/asyncArrowFunction5_es6.errors.txt
asyncArrowFunction5_es6.ts(1,18): error TS1359: Identifier expected. 'await' is a reserved word that cannot be used here.


==== asyncArrowFunction5_es6.ts (1 errors) ====
    var foo = async (await): Promise<void> => {
                     ~~~~~
!!! error TS1359: Identifier expected. 'await' is a reserved word that cannot be used here.
    }